# SmartHomeNetworkAutomation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt
client/include/: dummy.h
client/src/: main.cpp
server/: CMakeLists.txt
server/include/: dummy.h
server/src/: main.cpp
shared/: CMakeLists.txt
shared/include/: file1.h
shared/src/: file1.cpp
tests/: CMakeLists.txt
